# EVAN

./: .gitignore  BlockInterpreter.cc  CMakeLists.txt  Doxyfile  Each.cc  EachInterpreter.cc  Interpreter.cc  Makefile  Param.cc  Program.cc  README  README.md  Scope.cc  TODO  Value.cc  build.bash  build.sh  clean.sh  common.sh  contrib.tgz  dist.sh  evan.cc  install.sh  interp.hh  make.sh  program.hh  test.sh  util.hh
cli/: CMakeLists.txt  evan-doc.cc  evani.cc
cmake/: FindCCACHE.cmake
compile/: CMakeLists.txt  Compiler.cc  foreigns.xml
contrib/: perl-json.tgz
contrib/json-0.5/Text/: JSON.hs
core/: Block.cc  BlockExtra.cc  Builtin.cc  CMakeLists.txt  Category.cc  Comment.cc  CommentExtra.cc  Each.cc  EachExtra.cc  ForeignCategory.cc  ForeignFunc.cc  Makefile  NullExtra.cc  Param.cc  Pipe.cc  Program.cc  Util.hs  builtins.cc  builtins.xml  evan.hs  foreigns.xml
core/EVAN/: Combinatorics.lhs  Parse.hs  Primitive.lhs  Tracks.lhs
core/EVAN/Output/: Histogram.hs  PNG.hs
core/EVAN/Routines/Output/: SVG.hs  Unsafe.hs
core/Text/: EVAN.hs
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in
doc/dev/: Makefile  dev-manual.tex  tohs.tex
evanlib/: EVAN.cabal  EVAN.lhs
evanlib/EVAN/: Combinatorics.lhs  Math.lhs  Output.lhs  Primitive.lhs  Tracks.lhs
evanlib/EVAN/Output/: Histogram.hs  MIME.hs  Mime.hs  SVG.hs  Temp.hs
examples/: README.md  count-events.evan  count-jets.evan  count-lhco.evan  equality-test.evan  high-total-mass.evan  hist-lhco.evan  mul-table.evan  powers2.evan  select-all.evan  select-none.evan  sum-jet-mass.evan
foreign/: CMakeLists.txt  foreigns.xml  tracks.h  util.c
foreign/hepevt/: parse.c
foreign/lhco/: parse.c
foreign/lhe/: parse.c
foreign/tracks/: tracks.c
gui/: .gitignore  App.cc  App.hh  BlockSelector.cc  BuiltinTool.cc  CMakeLists.txt  Canvas.cc  CanvasBlock.cc  CanvasBlockItem.cc  CanvasComment.cc  CanvasItem.cc  CanvasPipe.cc  CanvasScene.cc  CanvasView.cc  CommentTool.c  CommentTool.cc  CreationDialog.cc  DefaultTool.cc  Dialog.cc  DialogFields.cc  EachTool.cc  EditDialog.cc  Logging.cc  MainPanel.cc  MainWindow.cc  Makefile  Menu.cc  MenuAction.cc  MenuBarManager.cc  MenuItem.cc  PipeTool.cc  ReturnTool.cc  Tool.cc  about.py  app.hh  canvas.cc  canvas.hh  canvas.py  dialog.hh  dialogs.cc  (+19 more)
httpd/: CMakeLists.txt  HTTPResponse.cc  Makefile  Server.cc  http.hh  httpd.cabal  httpd.cc  server.hh
include/: CMakeLists.txt  builtins.hh  compile.hh  config.hh.in  doxygen.hh  foreign.h  foreigns.hh  interp.hh  output.h  parse.hh  program.hh  typecheck.hh  util.hh
interp/: BlockInterpreter.cc  CMakeLists.txt  EachInterpreter.cc  EachPassthroughInterpreter.cc  Interpreter.cc  ProgramInterpreter.cc  Scope.cc  Value.cc
interp/builtin/: Combinatorics.cc  Core.cc  Math.cc
json2hs/: .Makefile.swp  Makefile  json2hs.lhs  json2hs.py  test.evan
lib/: EVAN.cabal  EVAN.hs  EVAN.lhs  Main.hs  Makefile  cmsht.cc
lib/EVAN/: Math.lhs  Primitive.lhs  Tracks.lhs
output/: CMakeLists.txt  ascii.c  histogram.c  histogram.h  methods.h  output.c  plain.c  plot.c  root.c
parse/: CMakeLists.txt  ParseError.cc  ParsedBlock.cc  ParsedComment.cc  ParsedEach.cc  ParsedParam.cc  ParsedPipe.cc  ParsedProgram.cc  lexer.l  parse.cc  parsed.hh  parser.y  parser_header.hh  write.cc
scripts/: evan-compile
test/: CMakeLists.txt  events1.lhe  main.cc
test/common/: CMakeLists.txt  hooks.cc  main.cc  module.cc  suite.cc  test.cc  test.hh
test/core/: FieldExtra.cc  Param.cc  param.cc
test/interp/: BlockInterpreter.cc  EachInterpreter.cc  Scope.cc  Value.cc
test/parse/: CMakeLists.txt  comments.evan  simple.evan  test-parse.cc
test/unit/: CMakeLists.txt
test/unit/common/: hooks.cc  main.cc
test/unit/core/: FieldExtra.cc  Param.cc
test/unit/foreign/: hepevt.cc  lhco.cc  lhe.cc  tracks.cc  util.cc
test/unit/foreign/data/: ttjj.lhco
test/unit/interp/: BlockInterpreter.cc  EachInterpreter.cc  Interpreter.cc  Scope.cc  Value.cc
test/unit/output/: ascii.cc  histogram.cc  plain.cc  plot.cc  root.cc
test/unit/typecheck/: BlockType.cc  ForeignType.cc  NativeType.cc  VariableType.cc
test/unit/util/: basic_serializable.cc  cli_arguments.cc  composite_registry.cc  either.cc  maybe.cc  simple_registry.cc
test/util/: basic_serializable.cc  bin_format.cc  cli_arguments.cc  either.cc  error.cc  json_format.cc  maybe.cc  numeric_atom.cc  serializer.cc  strconv.cc  string_atom.cc  vec.cc  xml_format.cc
tools/: gen-foreigns-cc.pl  gen-interp-foreigns-cc.pl  merge.pl  xdocs.pl
tools/evan2hs/: Makefile  evan2hs.hs  test.evan
tools/evan2hs/Text/: EVAN.hs
tools/json2hs/: json2hs.lhs  json2hs.py
tools/mkref/: html.hs  latex.hs  mkref.cabal  root.tmpl.html
tools/mkref/EVAN/: Documentation.hs
tools/mkref/EVAN/Documentation/: HTML.hs  Latex.hs  Make.hs
tools/squeeze/: LICENSE  squeeze.py
typecheck/: AnyType.cc  BlockType.cc  CMakeLists.txt  PrimitiveType.cc  lexer.l  parser.y  parser_header.hh
util/: CMakeLists.txt  Errors.cc  cli_arguments.cc  code_position.cc  error.cc  impossible_error.cc  json_format.cc  numeric_atom.cc  serializable.cc  string_atom.cc  system_error.cc
util/logging/: console_log.cc  default_format.cc  entry.cc  filestream_log.cc  format.cc  log.cc  logger.cc  stream_log.cc
www/: Makefile
www/src/: Main.hs
www/static/: index.html  style.css
