Name:                EVAN
Version:             0.1
Synopsis:            HEP Event Analysis Library
Description:         Event analysis library for high-energy physics simulations
License:             MIT
License-file:        LICENSE
Author:              Scott Lawrence
Maintainer:          bytbox@gmail.com
Category:            Physics
Build-type:          Simple
-- Extra-source-files:  
Cabal-version:       >=1.10

Library
  Exposed-modules: EVAN, EVAN.Primitive, EVAN.Math, EVAN.Tracks, EVAN.Output, EVAN.Combinatorics
  Other-modules: EVAN.Output.Histogram, EVAN.Output.SVG, EVAN.Output.PNG, EVAN.Output.MIME, EVAN.Output.Temp, EVAN.Output.Unsafe
  Build-depends: base >=3 && <5, lhe==0.5, hepevt==0.5, lha==0.1.2, json==0.5, filepath>=1.2, plot==0.1.3.2, cairo==0.12.3, hmatrix==0.13.1.0
  Default-language: Haskell2010

Test-Suite test-evan
  Default-language: Haskell2010
  type: exitcode-stdio-1.0
  Main-is: test.hs
  build-depends: base, Cabal >= 1.10
