find_package(BISON)
find_package(FLEX)

BISON_TARGET(EVANTYP parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.cc)
FLEX_TARGET(EVANTYP lexer.l  ${CMAKE_CURRENT_BINARY_DIR}/lexer.cc)
ADD_FLEX_BISON_DEPENDENCY(EVANTYP EVANTYP)

include_directories(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})

file (GLOB TYPECHECKSRCS "*.cc")
add_library (typecheck ${TYPECHECKSRCS} ${BISON_EVANTYP_OUTPUTS} ${FLEX_EVANTYP_OUTPUTS})

